update deploy script to use pm2 for starting the application

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -26,4 +26,4 @@ jobs:
             git pull
             npm install
             npm run build
-            npm run start
+            pm2 start npm --name "next-app" --run start
