--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -26,4 +26,4 @@ jobs:
             git pull
             npm install
             npm run build
-            pm2 start npm --name "next-app" --run start
+            pm2 start npm --name "next-app" -- start
